Aplicação correta do BEM para linhas 192 e 220 em HTML

--- a/index.html
+++ b/index.html
@@ -189,7 +189,10 @@
               minlength="2"
               maxlength="200"
             />
-            <button type="submit" class="button popup__button_type_save">
+            <button
+              type="submit"
+              class="button popup__button popup__button_type_save"
+            >
               Salvar
             </button>
           </form>
@@ -221,7 +224,10 @@
               placeholder="URL da imagem"
               required
             />
-            <button type="submit" class="button popup__button_type_save">
+            <button
+              type="submit"
+              class="button popup__button popup__button_type_save"
+            >
               Criar
             </button>
           </form>
