--- a/index.html
+++ b/index.html
@@ -85,19 +85,23 @@
             <input
               type="text"
               class="popup__input popup__input_type_name"
+              id="name-input"
               placeholder="Nome"
               required
               minlength="2"
               maxlength="40"
             />
+            <span class="popup__error" id="name-input-error"></span>
             <input
               type="text"
               class="popup__input popup__input_type_description"
+              id="about-input"
               placeholder="Sobre mim"
               required
               minlength="2"
               maxlength="200"
             />
+            <span class="popup__error" id="about-input-error"></span>
             <button
               type="submit"
               class="button popup__button popup__button_type_save"
@@ -122,17 +126,21 @@
             <input
               type="text"
               class="popup__input popup__input_type_title"
+              id="title-input"
               placeholder="Título"
               required
               minlength="2"
               maxlength="30"
             />
+            <span class="popup__error" id="title-input-error"></span>
             <input
               type="url"
               class="popup__input popup__input_type_link"
+              id="link-input"
               placeholder="URL da imagem"
               required
             />
+            <span class="popup__error" id="link-input-error"></span>
             <button
               type="submit"
               class="button popup__button popup__button_type_save"
@@ -153,6 +161,7 @@
         </div>
       </div>
     </div>
-    <script src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
