Implementa POO e Classes ES6.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <div class="page__content">
       <header class="header">
         <img
-          src="./images/logo.png"
+          src="../images/logo.png"
           alt="Around The U.S. logo"
           class="header__logo"
         />
@@ -19,7 +19,7 @@
       <main class="main">
         <section class="profile">
           <img
-            src="./images/profile-image.jpg"
+            src="../images/profile-image.jpg"
             alt="Foto de Jacques Cousteau"
             class="profile__image"
           />
@@ -28,7 +28,7 @@
               <h1 class="profile__name">Jacques Cousteau</h1>
               <button class="button button_type_edit">
                 <img
-                  src="./images/edit-button.png"
+                  src="../images/edit-button.png"
                   alt="Editar perfil"
                   class="button__icon"
                 />
@@ -38,7 +38,7 @@
           </div>
           <button class="button profile__add-button">
             <img
-              src="./images/add-button.png"
+              src="../images/add-button.png"
               alt="Adicionar"
               class="button__icon"
             />
@@ -51,10 +51,13 @@
 
         <template id="card-template">
           <li class="place-card">
-            <button
-              class="button button_type_delete"
-              aria-label="Apagar"
-            ></button>
+            <button class="button button_type_delete" aria-label="Apagar">
+              <img
+                src="../images/Trash.svg"
+                alt="Ícone de lixeira"
+                class="button__icon"
+              />
+            </button>
             <img src="#" alt="" class="place-card__image" />
             <div class="place-card__footer">
               <h2 class="place-card__title"></h2>
@@ -75,7 +78,7 @@
         <div class="popup__container">
           <button class="button button_type_close">
             <img
-              src="./images/close-button.png"
+              src="../images/close-button.png"
               alt="Fechar"
               class="button__icon"
             />
@@ -86,6 +89,7 @@
               type="text"
               class="popup__input popup__input_type_name"
               id="name-input"
+              name="name-input"
               placeholder="Nome"
               required
               minlength="2"
@@ -96,6 +100,7 @@
               type="text"
               class="popup__input popup__input_type_description"
               id="about-input"
+              name="about-input"
               placeholder="Sobre mim"
               required
               minlength="2"
@@ -116,7 +121,7 @@
         <div class="popup__container">
           <button class="button button_type_close">
             <img
-              src="./images/close-button.png"
+              src="../images/close-button.png"
               alt="Fechar"
               class="button__icon"
             />
@@ -127,6 +132,7 @@
               type="text"
               class="popup__input popup__input_type_title"
               id="title-input"
+              name="title-input"
               placeholder="Título"
               required
               minlength="2"
@@ -137,6 +143,7 @@
               type="url"
               class="popup__input popup__input_type_link"
               id="link-input"
+              name="link-input"
               placeholder="URL da imagem"
               required
             />
@@ -161,6 +168,6 @@
         </div>
       </div>
     </div>
-    <script type="module" src="./scripts/index.js"></script>
+    <script type="module" src="./pages/index.js"></script>
   </body>
 </html>
