--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EUA Afora</title>
-    <link rel="stylesheet" href="./src/pages/index.css" />
+    <link rel="stylesheet" href="src/pages/index.css" />
   </head>
   <body class="page">
     <div class="page__content">
       <header class="header">
         <img
-          src="/images/logo.png"
+          src="images/logo.png"
           alt="Around The U.S. logo"
           class="header__logo"
         />
@@ -19,7 +19,7 @@
       <main class="main">
         <section class="profile">
           <img
-            src="/images/profile-image.jpg"
+            src="images/profile-image.jpg"
             alt="Foto de Jacques Cousteau"
             class="profile__image"
           />
@@ -28,7 +28,7 @@
               <h1 class="profile__name">Jacques Cousteau</h1>
               <button class="button button_type_edit">
                 <img
-                  src="/images/edit-button.png"
+                  src="images/edit-button.png"
                   alt="Editar perfil"
                   class="button__icon"
                 />
@@ -38,7 +38,7 @@
           </div>
           <button class="button profile__add-button">
             <img
-              src="../images/add-button.png"
+              src="images/add-button.png"
               alt="Adicionar"
               class="button__icon"
             />
